# clvlib

./: .gitignore  GS_G_J_d.py  GS_G_d.py  HH_UG_d.py  Makefile  README.md  profile.html  profile.json  profile_GS2.json  profile_GSJ2.json  profile_HHJ_1024.json  profile_HHJ_128.json  profile_HHJ_256.json  profile_HHJ_512.json  profile_HHJ_64.json  prova.ipynb  provaL63.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
benchmarks/: generate_trajectory.py  lorenz96_solution.npz  profile_lyap.py  profile_numba.py  profile_numpy.py  prova.ipynb
clvlib/: __init__.py  prova.ipynb
clvlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
clvlib/numba/: __init__.py  lyap_fun.py
clvlib/numpy/: __init__.py  angles.py  api.py  clv.py  icle.py  integrators.py  lyap_fun.py  steppers.py
clvlib/pytorch/: angles.py  api.py  clv.py  icle.py  integrators.py  steppers.py
src/: __init__.py  lyap_fun.py  lyap_fun_jax.py  lyap_fun_numba.py  prova.ipynb
tests/: conftest.py  test_angles_and_icle.py  test_linear_system.py  test_torch_angles_and_icle.py  test_torch_linear_system.py
tutorials/: custom_numpy_stepper.ipynb  lorenz_numpy_quickstart.ipynb  lorenz_pytorch_quickstart.ipynb
