[build-system]
requires = [
  "setuptools>=68",
  "wheel>=0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "clvlib"
version = "0.1.0"
description = "Lyapunov exponents and Covariant Lyapunov Vectors utilities"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "numba>=0.56",
  "torch>=1.12",
]
readme = { text = "Utilities to compute Lyapunov exponents and Covariant Lyapunov Vectors (CLVs) via variational integration, Gram–Schmidt re-orthonormalization, and Ginelli’s algorithm.", "content-type" = "text/plain" }
authors = [
  {name = "clvlib authors"}
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "black>=24.3",
  "mypy>=1.10",
]

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["clvlib*"]
