[build-system]
requires = [
  "setuptools>=68",
  "wheel>=0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "clvlib"
version = "0.1.0"
description = "Lyapunov exponents and Covariant Lyapunov Vectors utilities"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "scipy>=1.8",
  "numba>=0.56",
  "torch>=1.12",
  "tqdm>=4.66",
]
readme = { text = "Utilities to compute Lyapunov exponents and Covariant Lyapunov Vectors (CLVs) Gram–Schmidt and Househodler re-orthonormalization, and Ginelli’s algorithm.", "content-type" = "text/plain" }
authors = [
  {name = "Riccardo Consonni"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/riccardo-consonni/clvlib"
Repository = "https://github.com/riccardo-consonni/clvlib"
Issues = "https://github.com/riccardo-consonni/clvlib/issues"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["clvlib*"]
